--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,6 +210,42 @@ span {
     margin-bottom: 22px;
 }
 
+.moreInfo {
+    margin-top: 20px;
+}
+
+.moreInfo h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.moreInfo ul {
+    list-style: none;
+    padding: 0;
+}
+
+.moreInfo ul li {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 5px;
+}
+
+.btn-dly {
+    color: white;
+    background: darkred;
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 40px;
+    text-decoration: none;
+    transition: all cubic-bezier(0.165, 0.84, 0.44, 1) 1s;
+}
+
+.btn-dly:hover {
+    color: white;
+    background: black;
+}
+
 /* Catalog Section */
 .catalog {
     background: #dcdcdc;
